added js to update through eventListeners and innerHTML.

--- a/todo.html
+++ b/todo.html
@@ -8,12 +8,6 @@
 <body>
 	<input type="text">
 	<ul></ul>
-	<script>
-		document.getElementsByTagName
-		("input")[0].onchange = (event) => {
-			document.getElementsByTagName
-			("ul")[0].innerHTML += `<li>${event.target.value}</li>`;
-		}
-	</script>
+	<script src="todo.js"></script>
 </body>
 </html>
