Added another input box and submit by button.

--- a/todo.html
+++ b/todo.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" href="todo.css"/>
 </head>
 <body>
-	<input type="text">
+	<input type="text" placeholder="Enter new to-do">
+	<p><input type="text" placeholder="Enter category"></p>
+	<button id="addBtn">Add</button>
 	<ul></ul>
 	<script src="todo.js"></script>
 </body>
