--- a/todo.html
+++ b/todo.html
@@ -20,7 +20,13 @@
 		<tr>
 			<td>checkbox</td>
 			<td>to-do</td>
-			<td>category</td>
+			<td>
+				<select id="categoryFilter">
+					<option value=""></option>
+					<option value="Personal">Personal</option>
+					<option value="Work">Work</option>
+				</select>
+			</td>
 			<td>delete</td>
 		</tr>
 	</table>
