--- a/todo.html
+++ b/todo.html
@@ -1,35 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<link rel="stylesheet" href="todo.css"/>
-</head>
-<body>
-	<input type="text" placeholder="Enter new to-do">
-	<p><input type="text" placeholder="Enter category" list="categoryList"></p>
-	<datalist id="categoryList">
-		<option value="Personal"></option>
-		<option value="Work"></option>
-	</datalist>
-	<button id="addBtn">Add</button>
-	<ul></ul>
-	<table id="todoTable">
-		<tr>
-			<td>checkbox</td>
-			<td>to-do</td>
-			<td>
-				<select id="categoryFilter">
-					<option value=""></option>
-					<option value="Personal">Personal</option>
-					<option value="Work">Work</option>
-				</select>
-			</td>
-			<td>delete</td>
-		</tr>
-	</table>
-	<script src="todo.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+		/>
+		<link rel="stylesheet" href="todo.css" />
+	</head>
+	<body>
+		<input type="text" placeholder="Enter new to-do" />
+		<p>
+			<input type="text" placeholder="Enter category" list="categoryList" />
+		</p>
+		<datalist id="categoryList">
+			<option value="Personal"></option>
+			<option value="Work"></option>
+		</datalist>
+		<button id="addBtn">Add</button>
+		<ul></ul>
+		<table id="todoTable">
+			<tr>
+				<td>checkbox</td>
+				<td>to-do</td>
+				<td>
+					<select id="categoryFilter"></select>
+				</td>
+				<td>delete</td>
+			</tr>
+		</table>
+		<script src="todo.js"></script>
+	</body>
 </html>
