Added date and time fields to the todo list.

--- a/todo.html
+++ b/todo.html
@@ -19,16 +19,20 @@
 			<option value="Personal"></option>
 			<option value="Work"></option>
 		</datalist>
+		<p><input type="date" id="dateInput"></p>
+		<p><input type="time" id="timeInput"></p>
 		<button id="addBtn">Add</button>
 		<ul></ul>
 		<table id="todoTable">
 			<tr>
-				<td>checkbox</td>
+				<td></td>
+				<td>Date</td>
+				<td>Time</td>
 				<td>to-do</td>
 				<td>
 					<select id="categoryFilter"></select>
 				</td>
-				<td>delete</td>
+				<td></td>
 			</tr>
 		</table>
 		<script src="todo.js"></script>
