Added sort by date button and solved some issues.

--- a/todo.html
+++ b/todo.html
@@ -22,6 +22,7 @@
 		<p><input type="date" id="dateInput"></p>
 		<p><input type="time" id="timeInput"></p>
 		<button id="addBtn">Add</button>
+		<p><button id="sortBtn">Sort</button></p>
 		<ul></ul>
 		<table id="todoTable">
 			<tr>
