Added FullCalendar api and styling.

--- a/todo.html
+++ b/todo.html
@@ -3,39 +3,59 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Banunu's Todo List</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
 		/>
 		<link rel="stylesheet" href="todo.css" />
 	</head>
-	<body>
-		<input type="text" placeholder="Enter new to-do" />
-		<p>
-			<input type="text" placeholder="Enter category" list="categoryList" />
-		</p>
-		<datalist id="categoryList">
-			<option value="Personal"></option>
-			<option value="Work"></option>
-		</datalist>
-		<p><input type="date" id="dateInput"></p>
-		<p><input type="time" id="timeInput"></p>
-		<button id="addBtn">Add</button>
-		<p><button id="sortBtn">Sort</button></p>
-		<ul></ul>
-		<table id="todoTable">
-			<tr>
-				<td></td>
-				<td>Date</td>
-				<td>Time</td>
-				<td>to-do</td>
-				<td>
-					<select id="categoryFilter"></select>
-				</td>
-				<td></td>
-			</tr>
-		</table>
+	<body class="oregano-regular">
+		<h1>Banunu's To-do List</h1>
+		<div class="todo-grid-parent">
+			<div>
+				<div class="todo-input todo-block">
+					<span>To-do: </span>
+					<input type="text" placeholder="Enter new to-do" />
+					<span>Category: </span>
+					<input type="text" placeholder="Enter category" list="categoryList" />
+					<datalist id="categoryList">
+						<option value="Personal"></option>
+						<option value="Work"></option>
+					</datalist>
+					<span>Date: </span>
+					<input type="date" id="dateInput" />
+					<span>Time: </span>
+					<input type="time" id="timeInput" />
+					<span></span>
+					<button id="addBtn" class="pink-btn">Add</button>
+					<span></span>
+					<button id="sortBtn" class="pink-btn">Sort</button>
+				</div>
+				<table id="todoTable" class="todo-block">
+					<tr>
+						<td></td>
+						<td>Date</td>
+						<td>Time</td>
+						<td>To-do</td>
+						<td>
+							<select id="categoryFilter"></select>
+						</td>
+						<td></td>
+					</tr>
+				</table>
+			</div>
+			<div class="todo-calendar todo-block">
+				<div id="calendar"></div>
+			</div>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.14/index.global.min.js"></script>
 		<script src="todo.js"></script>
 	</body>
 </html>
