Added a new option to show incomplete entries first

--- a/todo.html
+++ b/todo.html
@@ -36,7 +36,12 @@
 					<span></span>
 					<button id="addBtn" class="pink-btn">Add</button>
 					<span></span>
-					<button id="sortBtn" class="pink-btn">Sort</button>
+					<button id="sortBtn" class="pink-btn">Sort By Date</button>
+                    <span></span>
+                    <label>
+                        <input type="checkbox" id="shortlistBtn">
+                        Incomplete First
+                    </label>
 				</div>
 				<table id="todoTable" class="todo-block">
 					<tr>
